<resources>
    <string name="app_name">News Org</string>

    <string name="sample_source">The Guardian • 1h</string>
    <string name="sample_title">Magnus Carlsen retains his title</string>
    <string name="sample_title_long">Magnus Carlsen retains his wcc title</string>
    <string name="sample_description">Magnus Carlsen defeated Fabiano Caruana to retain his WCC title.</string>
    <string name="image_desc">Image for the News Post</string>

    <string name="title_news">News</string>
    <string name="title_bookmark">Bookmarked</string>
    <string name="title_channel">News Channel</string>

    <string name="image_desc_share_button">share button</string>
    <string name="image_desc_save_button">save button</string>
    <string name="image_desc_open_in_browser_button">open in browser button</string>
    <string name="image_btn_desc_next">Next Button</string>
    <string name="image_btn_desc_prev">Previous Button</string>
    <string name="bottom_sheet_option_save">Save for later</string>
    <string name="bottom_sheet_option_share">Share</string>
    <string name="bottom_sheet_option_open_in_browser">Open in browser</string>
    <string name="button_read_full_story">Read full story</string>

    <string name="image_desc_source_image">Source Image</string>
    <string name="sample_category">General</string>

    <string name="message_item_saved">News added to Bookmarked</string>
    <string name="message_item_removed">News removed from Bookmarked</string>
    <string name="info_no_saved_articles">No Bookmarked News</string>

    <string name="banner_ad_unit_id">ca-app-pub-9833477241887957/5078069730</string>
    <string name="admob_app_id">ca-app-pub-9833477241887957~2237365540</string>
    <string name="sample_page"><![CDATA[&#188;]]></string>
</resources>
