<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="capstone.kurosaki.newsorg.utils.BindingUtils" />

        <variable
            name="news"
            type="capstone.kurosaki.newsorg.News" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingStart="@dimen/rv_horizontal_offset"
        android:paddingTop="@dimen/rv_vertical_offset"
        android:paddingEnd="@dimen/rv_horizontal_offset"
        android:paddingBottom="@dimen/rv_vertical_offset"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:minLines="3"
            android:text="@{news.title}"
            android:textAppearance="@style/AppTheme.Headline.Title"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/iv_options"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_news_image"
            tools:text="@string/sample_title_long" />

        <ImageView
            android:id="@+id/iv_news_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/image_desc"
            android:src="@color/cardBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:articleUrl="@{news.url}"
            bind:url="@{news.urlToImage}" />

        <TextView
            android:id="@+id/tv_news_source"
            android:layout_width="155dp"
            android:layout_height="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@{BindingUtils.getSourceAndTime(news.source.name, news.publishedAt)}"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_news_title"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title"
            tools:text="@string/sample_source" />

        <ImageButton
            android:id="@+id/iv_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_desc"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_news_title"
            app:srcCompat="@drawable/ic_more_options" />
    </android.support.constraint.ConstraintLayout>
</layout>